Bug 15443 - Heimdal fails to build on 32-bit FreeBSD
Summary: Heimdal fails to build on 32-bit FreeBSD
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.19.0rc1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-03 02:13 UTC by Jennifer Sutton
Modified: 2023-08-08 07:23 UTC (History)
2 users (show)

See Also:


Attachments
patch for Samba 4.19 (1.42 KB, patch)
2023-08-03 21:25 UTC, Jennifer Sutton
abartlet: review+
jsutton: review? (metze)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jennifer Sutton 2023-08-03 02:13:58 UTC
Heimdal fails to build due to a mismatch between a logging format string and the types of its associated arguments.
Comment 1 Jennifer Sutton 2023-08-03 02:14:44 UTC
Merge request: https://gitlab.com/samba-team/samba/-/merge_requests/3208
Comment 2 Samba QA Contact 2023-08-03 05:41:04 UTC
This bug was referenced in samba master:

06d673a1a0c54e78773cc951124486b547ca880d
Comment 3 Jennifer Sutton 2023-08-03 21:25:39 UTC
Created attachment 18024 [details]
patch for Samba 4.19
Comment 4 Andrew Bartlett 2023-08-03 21:27:26 UTC
Assigning to Jule for next 4.19 pre-release.
Comment 5 Jule Anger 2023-08-04 06:59:16 UTC
Pushed to autobuild-v4-19-test.
Comment 6 Samba QA Contact 2023-08-04 09:32:03 UTC
This bug was referenced in samba v4-19-test:

9a87e2061dc22a9a029619d4c8d74f046184db67
Comment 7 Jule Anger 2023-08-04 09:41:20 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-08-08 07:23:07 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.0rc2):

9a87e2061dc22a9a029619d4c8d74f046184db67